--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "jackblatch",
   "license": "ISC",
+  "bin": "./dist/index.js",
   "dependencies": {
     "inquirer": "^9.2.7",
     "nanospinner": "^1.1.0"
